# backup

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
src/: BytesFormatter.cpp  CMakeLists.txt  Config.cpp  Config.h  Context.h  Diff.cpp  Diff.h  Exception.cpp  Progress.cpp  RunningAverage.cpp  RunningDiffAverage.cpp  RunningDiffAverage.h  ThreadPool.cpp  ThreadPool.h  main.cpp
src/change_detectors/: CMakeLists.txt  ChangeDetectorContainer.cpp  ChangeDetectorFactory.cpp  ChangeDetectorFactory.h  ComparableFile.cpp  ComparableFile.h  ContentsChangeDetector.h  EditTimeChangeDetector.h  SizeChangeDetector.h  TypeChangeDetector.cpp  TypeChangeDetector.h
src/change_detectors/includes/: ChangeDetector.h  ChangeDetectorContainer.h  ChangeDetectorFactory.h  ComparableFile.h
src/change_detectors/srcs/: ChangeDetector.cpp  ChangeDetectorContainer.cpp  ChangeDetectorFactory.cpp  ComparableFile.cpp  ContentsChangeDetector.cpp  EditTimeChangeDetector.cpp  SizeChangeDetector.cpp  TypeChangeDetector.cpp
src/chunkers/: Buzhash.cpp  BuzhashChunker.cpp  CMakeLists.txt  Chunker.cpp  ChunkerFactory.cpp  ChunkerFactory.h  ConstChunker.cpp
src/chunkers/includes/: Buzhash.h  BuzhashChunker.h  Chunker.h  ChunkerFactory.h  ConstChunker.h
src/chunkers/srcs/: Buzhash.cpp  BuzhashChunker.cpp  Chunker.cpp  ChunkerFactory.cpp  ConstChunker.cpp
src/commands/: CMakeLists.txt  Command.cpp  Command.h  CommandDiff.cpp  CommandDiff.h  CommandList.cpp  CommandList.h  CommandListFiles.cpp  CommandListFiles.h  CommandRestore.cpp  CommandRestore.h  CommandRun.cpp  CommandsCommon.cpp  CommandsCommon.h
src/commands/includes/: Command.h  CommandDelete.h  CommandDiff.h  CommandList.h  CommandListFiles.h  CommandMount.h  CommandRestore.h  CommandRun.h  CommandsCommon.h  Context.h  Diff.h
src/commands/srcs/: Command.cpp  CommandDelete.cpp  CommandDiff.cpp  CommandList.cpp  CommandListFiles.cpp  CommandMount.cpp  CommandRestore.cpp  CommandRun.cpp  CommandsCommon.cpp  Diff.cpp
src/crypto/: AES.cpp  CMakeLists.txt  CRC32.h  MD5.cpp
src/crypto/includes/: AES.h  MD5.h  SHA.h
src/crypto/srcs/: AES.cpp  CRC32.cpp  MD5.cpp  SHA.cpp
src/filters/: CMakeLists.txt  CheckFilter.cpp  CheckFilter.h  Filter.cpp  FilterAES.cpp  FilterContainer.cpp  FilterFactory.cpp  FilterFactory.h  FilterShift.cpp  FilterShift.h  FilterShiftSecret.cpp  FilterShiftSecret.h  FilterZlib.cpp  FilterZlib.h
src/filters/includes/: Filter.h  FilterAES.h  FilterContainer.h  FilterFactory.h  FilterShift.h  FilterShiftSecret.h
src/filters/srcs/: CheckFilter.cpp  Filter.cpp  FilterAES.cpp  FilterContainer.cpp  FilterFactory.cpp  FilterShift.cpp  FilterShiftSecret.cpp  FilterZlib.cpp
src/fuse/: CMakeLists.txt
src/fuse/includes/: RepoFS.h
src/fuse/srcs/: RepoFS.cpp
src/repo/: CMakeLists.txt  FileRepository.cpp  Object.cpp  Object.h  Repository.h  Serialize.h
src/repo/includes/: FileRepository.h  Object.h  Repository.h  Serialize.h
src/repo/includes/objects/: Archive.h  Chunk.h  File.h
src/repo/objects/: Archive.cpp  Chunk.cpp  File.cpp  FileBuffer.cpp  FileBuffer.h
src/repo/srcs/: FileRepository.cpp  Object.cpp  Repository.cpp
src/repo/srcs/objects/: Archive.cpp  Chunk.cpp  File.cpp  FileBuffer.cpp
src/utils/: CMakeLists.txt
src/utils/includes/: BytesFormatter.h  Config.h  Exception.h  Logger.h  Progress.h  RunningAverage.h  Serialize.h  Signals.h
src/utils/srcs/: BytesFormatter.cpp  Config.cpp  Exception.cpp  Logger.cpp  Progress.cpp  RunningAverage.cpp  RunningDiffAverage.cpp  Signals.cpp  ThreadPool.cpp
tests/: BuzhashTest.cpp  BuzhashTest.h  CLITestWrapper.cpp  CLITestWrapper.h  CMakeLists.txt  runTests.cpp
tests/chunkers/: CMakeLists.txt
tests/chunkers/srcs/: BuzhashTest.cpp
tests/clitests/: CMakeLists.txt  backup.sh  diff.sh  ignore.sh
tests/clitests/scripts/: backup.sh  diff.sh  ignore.sh
tests/clitests/srcs/: CLITestWrapper.cpp
tests/crypto/: AESTest.cpp  AESTest.h  CMakeLists.txt  MD5Test.cpp  MD5Test.h
tests/crypto/srcs/: CryptoTests.cpp
tests/fulltests/: CMakeLists.txt  FullTest.cpp  FullTest.h
tests/fulltests/srcs/: FullTest.cpp
tests/repo/: CMakeLists.txt  ChunkTest.cpp  ChunkTest.h  FileRepositoryTest.cpp  FileRepositoryTest.h
tests/repo/srcs/: ChunkTest.cpp  FileRepositoryTest.cpp
tests/utils/: CMakeLists.txt  Cleaner.cpp  HelpfulAssert.h  HelpfulAssertTest.cpp  HelpfulAssertTest.h  Runnable.cpp  Runnable.h  Test.cpp  Test.h  TestGroup.cpp  TestGroup.h  TestGroupGenerator.h
tests/utils/includes/: Cleaner.h
tests/utils/srcs/: Cleaner.cpp
